objects/BMCServiceDesk__CMDB_Staging__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__MEM_Removable__c</fullName>
        <label>Removable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MEM_Replaceable__c</fullName>
        <label>Replaceable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MEM_Speed__c</fullName>
        <label>Speed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MF_AvailableCPs__c</fullName>
        <label>AvailableCPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MF_AvailableIFAs__c</fullName>
        <label>AvailableIFAs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MF_AvailableIFCs__c</fullName>
        <label>AvailableIFCs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MF_AvailableIFLs__c</fullName>
        <label>AvailableIFLs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MF_GridLocation__c</fullName>
        <label>GridLocation</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MF_InstalledCPUs__c</fullName>
        <label>InstalledCPUs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MF_InstalledCPs__c</fullName>
        <label>InstalledCPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MF_InstalledDASD__c</fullName>
        <label>InstalledDASD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MF_NumberChannels__c</fullName>
        <label>NumberChannels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MF_NumberOfLPARS__c</fullName>
        <label>NumberOfLPARS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MF_PhysicalMemory__c</fullName>
        <label>PhysicalMemory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MON_Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MON_Display_Type__c</fullName>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiscan Color</fullName>
                </value>
                <value>
                    <fullName>Multiscan Monochrome</fullName>
                </value>
                <value>
                    <fullName>Fixed Frequency Color</fullName>
                </value>
                <value>
                    <fullName>Fixed Frequency Monochrome</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MON_Pixels_Per_X_Logical_Inch__c</fullName>
        <label>Pixels Per X Logical Inch</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MON_Pixels_Per_Y_Logical_Inch__c</fullName>
        <label>Pixels Per Y Logical Inch</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MON_Screen_Height__c</fullName>
        <label>Screen Height</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MON_Screen_Width__c</fullName>
        <label>Screen Width</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NP_Active_Maximum_Transmission_Unit__c</fullName>
        <label>Active Maximum Transmission Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NP_Auto_Sense__c</fullName>
        <label>Auto Sense</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NP_Full_Duplex__c</fullName>
        <label>Full Duplex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NP_Link_Technology__c</fullName>
        <label>Link Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>FC</fullName>
                </value>
                <value>
                    <fullName>FDDI</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Token Ring</fullName>
                </value>
                <value>
                    <fullName>Frame Relay</fullName>
                </value>
                <value>
                    <fullName>Infrared</fullName>
                </value>
                <value>
                    <fullName>BlueTooth</fullName>
                </value>
                <value>
                    <fullName>Wireless LAN</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NP_Max_Speed__c</fullName>
        <label>Maximum Speed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NP_Network_Addresses__c</fullName>
        <label>Network Addresses</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NP_Permanent_Address__c</fullName>
        <label>Permanent Address</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NP_Physical_Description__c</fullName>
        <label>Physical Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NP_Port_Type__c</fullName>
        <label>Port Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>FDDI</fullName>
                </value>
                <value>
                    <fullName>Token Ring</fullName>
                </value>
                <value>
                    <fullName>WAN</fullName>
                </value>
                <value>
                    <fullName>Fibre Channel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NP_Speed__c</fullName>
        <label>Speed</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NP_Supported_Maximum_Transmission_Unit__c</fullName>
        <label>Supported Maximum Transmission Unit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_ClientSiteName__c</fullName>
        <label>ClientSiteName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DSDirectoryServiceFlag__c</fullName>
        <label>DSDirectoryServiceFlag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DSDnsControllerFlag__c</fullName>
        <label>DSDnsControllerFlag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DSDnsDomainFlag__c</fullName>
        <label>DSDnsDomainFlag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DSDnsForestFlag__c</fullName>
        <label>DSDnsForestFlag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DSGlobalCatalogFlag__c</fullName>
        <label>DSGlobalCatalogFlag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DSKerberosDistributionCenterFlag__c</fullName>
        <label>DSKerberosDistributionCenterFlag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DSPrimaryDomainControllerFlag__c</fullName>
        <label>DSPrimaryDomainControllerFlag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DSTimeServiceFlag__c</fullName>
        <label>DSTimeServiceFlag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DSWritableFlag__c</fullName>
        <label>DSWritableFlag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DcSiteName__c</fullName>
        <label>DcSiteName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DnsForestName__c</fullName>
        <label>DnsForestName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DomainControllerAddressType__c</fullName>
        <label>DomainControllerAddressType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DS_INET_ADDRESS</fullName>
                </value>
                <value>
                    <fullName>DS_NETBIOS_ADDRESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DomainControllerAddress__c</fullName>
        <label>DomainControllerAddress</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DomainControllerName__c</fullName>
        <label>DomainControllerName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DomainGuid__c</fullName>
        <label>DomainGuid</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NTD_DomainName__c</fullName>
        <label>DomainName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OFFR_OfferingType__c</fullName>
        <label>OfferingType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Requestable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ORG_BusinessCategory__c</fullName>
        <label>BusinessCategory</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ORG_Email__c</fullName>
        <label>Email</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ORG_URI__c</fullName>
        <label>URI</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OS_CountryCode__c</fullName>
        <label>CountryCode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OS_MaxNumberOfProcesses__c</fullName>
        <label>MaxNumberOfProcesses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OS_MaxProcessMemorySize__c</fullName>
        <label>MaxProcessMemorySize</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OS_OSLanguage__c</fullName>
        <label>OSLanguage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OS_OSProductSuite__c</fullName>
        <label>OSProductSuite</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>BackOffice</fullName>
                </value>
                <value>
                    <fullName>Communication Server</fullName>
                </value>
                <value>
                    <fullName>Terminal Server</fullName>
                </value>
                <value>
                    <fullName>Small Business (Restricted)</fullName>
                </value>
                <value>
                    <fullName>Embedded NT</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OS_OSType__c</fullName>
        <label>OSType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>MACOS</fullName>
                </value>
                <value>
                    <fullName>ATTUNIX</fullName>
                </value>
                <value>
                    <fullName>DGUX</fullName>
                </value>
                <value>
                    <fullName>DECNT</fullName>
                </value>
                <value>
                    <fullName>Tru64 UNIX</fullName>
                </value>
                <value>
                    <fullName>Open VMS</fullName>
                </value>
                <value>
                    <fullName>HPUX</fullName>
                </value>
                <value>
                    <fullName>AIX</fullName>
                </value>
                <value>
                    <fullName>z/OS</fullName>
                </value>
                <value>
                    <fullName>OS400</fullName>
                </value>
                <value>
                    <fullName>OS/2</fullName>
                </value>
                <value>
                    <fullName>JavaVM</fullName>
                </value>
                <value>
                    <fullName>MSDOS</fullName>
                </value>
                <value>
                    <fullName>WIN3x</fullName>
                </value>
                <value>
                    <fullName>WIN95</fullName>
                </value>
                <value>
                    <fullName>WIN98</fullName>
                </value>
                <value>
                    <fullName>WINNT</fullName>
                </value>
                <value>
                    <fullName>WINCE</fullName>
                </value>
                <value>
                    <fullName>NCR3000</fullName>
                </value>
                <value>
                    <fullName>NetWare</fullName>
                </value>
                <value>
                    <fullName>OSF</fullName>
                </value>
                <value>
                    <fullName>DC/OS</fullName>
                </value>
                <value>
                    <fullName>Reliant UNIX</fullName>
                </value>
                <value>
                    <fullName>SCO UnixWare</fullName>
                </value>
                <value>
                    <fullName>SCO Open Server</fullName>
                </value>
                <value>
                    <fullName>Sequent</fullName>
                </value>
                <value>
                    <fullName>IRIX</fullName>
                </value>
                <value>
                    <fullName>Solaris</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OS_Organization__c</fullName>
        <label>Organization</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OS_PAEEnabled__c</fullName>
        <label>PAEEnabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OS_ProductType__c</fullName>
        <label>ProductType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work Station</fullName>
                </value>
                <value>
                    <fullName>Domain Controller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OS_SuiteMask__c</fullName>
        <label>SuiteMask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OS_SystemDirectory__c</fullName>
        <label>SystemDirectory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PAT_Service_Pack_In_Effect__c</fullName>
        <label>Service Pack In Effect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PAT_Severity_Rating__c</fullName>
        <label>Severity Rating</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PDD_Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Standard Product</fullName>
                </value>
                <value>
                    <fullName>Composite Product</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PD_Device_Interface__c</fullName>
        <label>Device Interface</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Serial</fullName>
                </value>
                <value>
                    <fullName>PS/2</fullName>
                </value>
                <value>
                    <fullName>Infrared</fullName>
                </value>
                <value>
                    <fullName>HP-HIL</fullName>
                </value>
                <value>
                    <fullName>Bus mouse</fullName>
                </value>
                <value>
                    <fullName>ADB (Apple Desktop Bus)</fullName>
                </value>
                <value>
                    <fullName>Bus mouse DB-9</fullName>
                </value>
                <value>
                    <fullName>Bus mouse micro-DIN</fullName>
                </value>
                <value>
                    <fullName>USB</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PD_Number_of_Buttons__c</fullName>
        <label>Number of Buttons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PD_Pointing_Type__c</fullName>
        <label>Pointing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mouse</fullName>
                </value>
                <value>
                    <fullName>Track Ball</fullName>
                </value>
                <value>
                    <fullName>Track Point</fullName>
                </value>
                <value>
                    <fullName>Glide Point</fullName>
                </value>
                <value>
                    <fullName>Touch Pad</fullName>
                </value>
                <value>
                    <fullName>Touch Screen</fullName>
                </value>
                <value>
                    <fullName>Mouse - Optical Sensor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PEP_Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PEP_ProtocolType__c</fullName>
        <label>ProtocolType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>IPv4</fullName>
                </value>
                <value>
                    <fullName>IPv6</fullName>
                </value>
                <value>
                    <fullName>IPX</fullName>
                </value>
                <value>
                    <fullName>AppleTalk</fullName>
                </value>
                <value>
                    <fullName>DECnet</fullName>
                </value>
                <value>
                    <fullName>SNA</fullName>
                </value>
                <value>
                    <fullName>CONP</fullName>
                </value>
                <value>
                    <fullName>CLNP</fullName>
                </value>
                <value>
                    <fullName>VINES</fullName>
                </value>
                <value>
                    <fullName>XNS</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>Frame Relay</fullName>
                </value>
                <value>
                    <fullName>Ethernet</fullName>
                </value>
                <value>
                    <fullName>TokenRing</fullName>
                </value>
                <value>
                    <fullName>FDDI</fullName>
                </value>
                <value>
                    <fullName>Infiniband</fullName>
                </value>
                <value>
                    <fullName>Fibre Channel</fullName>
                </value>
                <value>
                    <fullName>ISDN BRI Endpoint</fullName>
                </value>
                <value>
                    <fullName>ISDN B Channel Endpoint</fullName>
                </value>
                <value>
                    <fullName>ISDN D Channel Endpoint</fullName>
                </value>
                <value>
                    <fullName>IPv4/v6</fullName>
                </value>
                <value>
                    <fullName>BGP</fullName>
                </value>
                <value>
                    <fullName>OSPF</fullName>
                </value>
                <value>
                    <fullName>MPLS</fullName>
                </value>
                <value>
                    <fullName>UDP</fullName>
                </value>
                <value>
                    <fullName>TCP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_Email__c</fullName>
        <label>Email</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_Fax__c</fullName>
        <label>Fax</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_FirstName__c</fullName>
        <label>FirstName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_LastName__c</fullName>
        <label>LastName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_OfficePhone__c</fullName>
        <label>OfficePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_PagerEmail__c</fullName>
        <label>PagerEmail</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_PagerPINNumber__c</fullName>
        <label>PagerPINNumber</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_PagerParams1__c</fullName>
        <label>PagerParams1</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_PagerParams2__c</fullName>
        <label>PagerParams2</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_PagerPhoneNumber__c</fullName>
        <label>PagerPhoneNumber</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_PagerProvider__c</fullName>
        <label>PagerProvider</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_PagerSoftware__c</fullName>
        <label>PagerSoftware</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_PagerType__c</fullName>
        <label>PagerType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Numeric Only</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_PersonAdditionalDetails__c</fullName>
        <label>PersonAdditionalDetails</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_PersonDepartment__c</fullName>
        <label>PersonDepartment</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_PersonId__c</fullName>
        <label>PersonId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_PersonRegion__c</fullName>
        <label>PersonRegion</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_SecondaryEmail__c</fullName>
        <label>SecondaryEmail</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_Title__c</fullName>
        <label>Title</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PERS_WebPage__c</fullName>
        <label>WebPage</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>